scripts/nullaway/annotator/url78f6619d18_IntersectAustralia_rifcs_tgz-pJ8-org_ands_rifcs_example_SampleRIFCSBuildCollectionJ8.txt
../annotator/url78f6619d18_IntersectAustralia_rifcs_tgz-pJ8-org_ands_rifcs_example_SampleRIFCSBuildCollectionJ8/src/RIFCSElement.java:17: error: [NullAway] assigning @Nullable expression to @NonNull field
/*  40 */   private Element e = null;
                            ^
    (see http://t.uber.com/nullaway )
../annotator/url78f6619d18_IntersectAustralia_rifcs_tgz-pJ8-org_ands_rifcs_example_SampleRIFCSBuildCollectionJ8/src/DefaultRIFCSHandler.java:18: error: [NullAway] assigning @Nullable expression to @NonNull field
/*  51 */   private Document doc = null;
                             ^
    (see http://t.uber.com/nullaway )
../annotator/url78f6619d18_IntersectAustralia_rifcs_tgz-pJ8-org_ands_rifcs_example_SampleRIFCSBuildCollectionJ8/src/DefaultRIFCSHandler.java:107: error: [NullAway] dereferenced expression this.locator is @Nullable
/* 236 */     int line = this.locator.getLineNumber();
                                     ^
    (see http://t.uber.com/nullaway )
../annotator/url78f6619d18_IntersectAustralia_rifcs_tgz-pJ8-org_ands_rifcs_example_SampleRIFCSBuildCollectionJ8/src/RegistryObject.java:167: error: [NullAway] dereferenced expression this.objectClass is @Nullable
/* 367 */     if (this.objectClass.equals("collection"))
                                  ^
    (see http://t.uber.com/nullaway )
../annotator/url78f6619d18_IntersectAustralia_rifcs_tgz-pJ8-org_ands_rifcs_example_SampleRIFCSBuildCollectionJ8/src/Activity.java:160: error: [NullAway] dereferenced expression subject is @Nullable
/* 420 */     subject.setValue(value);
                     ^
    (see http://t.uber.com/nullaway )
../annotator/url78f6619d18_IntersectAustralia_rifcs_tgz-pJ8-org_ands_rifcs_example_SampleRIFCSBuildCollectionJ8/src/Party.java:162: error: [NullAway] dereferenced expression subject is @Nullable
/* 347 */     subject.setValue(value);
                     ^
    (see http://t.uber.com/nullaway )
../annotator/url78f6619d18_IntersectAustralia_rifcs_tgz-pJ8-org_ands_rifcs_example_SampleRIFCSBuildCollectionJ8/src/Service.java:161: error: [NullAway] dereferenced expression subject is @Nullable
/* 399 */     subject.setValue(value);
                     ^
    (see http://t.uber.com/nullaway )
../annotator/url78f6619d18_IntersectAustralia_rifcs_tgz-pJ8-org_ands_rifcs_example_SampleRIFCSBuildCollectionJ8/src/Service.java:273: error: [NullAway] dereferenced expression policy is @Nullable
/* 634 */     policy.setValue(accessPloicyVal);
                    ^
    (see http://t.uber.com/nullaway )
../annotator/url78f6619d18_IntersectAustralia_rifcs_tgz-pJ8-org_ands_rifcs_example_SampleRIFCSBuildCollectionJ8/src/RIFCSWrapper.java:78: error: [NullAway] dereferenced expression this.doc is @Nullable
/* 142 */     DOMImplementation impl = this.doc.getImplementation();
                                               ^
    (see http://t.uber.com/nullaway )
../annotator/url78f6619d18_IntersectAustralia_rifcs_tgz-pJ8-org_ands_rifcs_example_SampleRIFCSBuildCollectionJ8/src/RIFCS.java:17: error: [NullAway] assigning @Nullable expression to @NonNull field
/*  60 */   private Document doc = null;
                             ^
    (see http://t.uber.com/nullaway )
../annotator/url78f6619d18_IntersectAustralia_rifcs_tgz-pJ8-org_ands_rifcs_example_SampleRIFCSBuildCollectionJ8/src/RIFCS.java:91: error: [NullAway] dereferenced expression ((ArrayList)this.rosByClass.get(r.getObjectClassName())) is @Nullable
/* 209 */     ((ArrayList)this.rosByClass.get(r.getObjectClassName())).add(r);
                                                                      ^
    (see http://t.uber.com/nullaway )
../annotator/url78f6619d18_IntersectAustralia_rifcs_tgz-pJ8-org_ands_rifcs_example_SampleRIFCSBuildCollectionJ8/src/RIFCS.java:103: error: [NullAway] dereferenced expression ((ArrayList)this.rosByClass.get(ro.getObjectClassName())) is @Nullable
/* 224 */       ((ArrayList)this.rosByClass.get(ro.getObjectClassName())).add(ro);
                                                                         ^
    (see http://t.uber.com/nullaway )
../annotator/url78f6619d18_IntersectAustralia_rifcs_tgz-pJ8-org_ands_rifcs_example_SampleRIFCSBuildCollectionJ8/src/ROElement.java:13: error: [NullAway] assigning @Nullable expression to @NonNull field
/*  42 */   private Element e = null;
                            ^
    (see http://t.uber.com/nullaway )
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
13 errors
